# uav-landing-experiment-platform

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  ros2_px4_ws.repos
catkin_ws_src/deck_interface_ros1/: CMakeLists.txt  package.xml
docs/: BASELINE_ACCEPTANCE.md  FRAME_CONVENTION.md  MIXED_ROS1_ROS2_ARCHITECTURE.md  PHASE1_ACCEPTANCE.md  TIME_BASE.md
ros2_research_ws_src/controller_interface/: README.md  package.xml  setup.py
ros2_research_ws_src/deck_description/: package.xml  setup.cfg  setup.py
ros2_research_ws_src/deck_description/deck_description/: deck_geometry_node.py
ros2_research_ws_src/deck_description/resource/: deck_description
ros2_research_ws_src/deck_interface/: README.md  package.xml  setup.cfg  setup.py
ros2_research_ws_src/deck_interface/deck_interface/: deck_truth_ingest_node.py  landing_zone_state_node.py  truth_relay_node.py
ros2_research_ws_src/deck_interface/deck_interface/transitional/: uav_truth_provider_node.py
ros2_research_ws_src/experiment_manager/: README.md  package.xml  setup.cfg  setup.py
ros2_research_ws_src/frame_audit/: package.xml  setup.cfg  setup.py
ros2_research_ws_src/joint_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2_research_ws_src/landing_decision/: README.md  package.xml  setup.cfg  setup.py
ros2_research_ws_src/landing_guidance/: README.md  package.xml  setup.py  (+1 more)
scripts/: apply_overlay.sh  bootstrap.sh  bootstrap_mixed_stack.sh  run_microxrce_agent.sh  run_mission.sh  run_ros1_bridge.sh  run_ros1_deck_interface.sh  run_ros1_world.sh  run_ros2_research.sh  run_sim.sh  stop_platform.sh
(+78 files in other folders)
