<?xml version="1.0"?>
<package format="3">
  <name>deck_description</name>
  <version>0.0.1</version>
  <description>Deck geometry and landing target metadata for Phase 1 moving-deck landing experiments.</description>

  <maintainer email="jia@example.com">jia</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
